[package]
name = "misaka_bot"
version = "0.1.0"
authors = ["serkxa <serkxa@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7"
dotenv = "0.15"
serenity = "0.8"
ron = "0.5"
serde = "1.0"
log = "0.4"